# chasing-bread

./: .env.example  .gitignore  .gitmodules  README.md  open_questions.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
data_collection/: README.md  __init__.py  __main__.py  cli.py
data_collection/config/: README.md  settings.py
data_collection/pipelines/: README.md  __init__.py  export.py  filter.py  normalize.py  report.py
data_collection/pipelines/filters/: __init__.py  aspect_ratio.py  base.py  blur.py  clip_relevance.py  duplicate.py  negative_keyword.py  resolution.py
data_collection/scrapers/: README.md  __init__.py  base.py  xhs.py
data_collection/utils/: README.md  __init__.py  debug_snapshot.py  logging_utils.py  rate_limit.py
data_collection/xhs/: README.md  __init__.py  api_client.py  browser_fingerprint.py  error_handler.py  item_parser.py  qrcode_auth.py  request_utils.py  search.py  session.py
data_collection/xhs/mc_api/: __init__.py  _api.py  _client.py  _dom.py  _errors.py  _headers.py  _search.py  _symbols.py
data_collection/xhs/tag_tracker/: __init__.py  config.py  helpers.py  tracker.py
docs/: phase2a_filtering.md
tests/: conftest.py  test_browser_fingerprint.py  test_cookie_utils.py  test_debug_snapshot.py  test_error_handler.py  test_filters.py  test_item_parser.py  test_normalize.py  test_rate_limit.py  test_rate_limiting.py  test_session_login.py  test_settings.py
